--- a/sparkcode_snippets.ipynb
+++ b/sparkcode_snippets.ipynb
@@ -6,7 +6,7 @@
       "name": "sparkcode_snippets.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOsC6oidNoSgwRrAa9cSvS5",
+      "authorship_tag": "ABX9TyPTu5j0vfO2gxw5cd1v69Hw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,24 +152,15 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "zbSUBDvLjSLS"
-      },
-      "source": [
-        "**Handling Errors**"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "-zBeBmUFi_sY"
       },
       "source": [
         "from pyspark.sql.types import StructField,StringType,IntegerType,StructType,DoubleType\n",
-        "from pyspark.sql.functions import col,lit,desc,spark_partition_id"
+        "from pyspark.sql.functions import col,lit,desc,spark_partition_id,row_number"
       ],
-      "execution_count": null,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -331,7 +322,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UQlFK-zns4Gm",
-        "outputId": "4f2e0076-4106-4fb4-b7b4-dbdcf000966d"
+        "outputId": "cc556c43-341e-4377-abe5-1c527c977ab2"
       },
       "source": [
         "airports_df = spark.read.format(\"csv\")\\\n",
@@ -339,7 +330,7 @@
         "              .load(\"airports.dat.txt\")\n",
         "airports_df.show(5)            "
       ],
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,12 +358,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "10e59743-8fb1-42e8-bb7e-751d748b4341"
+        "outputId": "80464d53-838c-46c0-821a-0da734f29f08"
       },
       "source": [
         "airports_df.count()"
       ],
-      "execution_count": 37,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -384,7 +375,52 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zbSUBDvLjSLS"
+      },
+      "source": [
+        "**Airports at highest altitude**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T2cmQOxR3FxI",
+        "outputId": "145946ec-fb28-41bb-a01b-5f290ff9fd4e"
+      },
+      "source": [
+        "from pyspark.sql import Window\n",
+        "windowspec = Window.orderBy(desc('altitude'))\n",
+        "df1=airports_df.select(\"name\",\"city\",\"country\",\"altitude\")\\\n",
+        "      .withColumn(\"rnk\",row_number().over(windowspec)).show(5)"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "+--------------------+---------+-------+--------+---+\n",
+            "|                name|     city|country|altitude|rnk|\n",
+            "+--------------------+---------+-------+--------+---+\n",
+            "|Qamdo Bangda Airport|   Bangda|  China| 14219.0|  1|\n",
+            "| Ngari Gunsa Airport|Shiquanhe|  China| 14022.0|  2|\n",
+            "|El Alto Internati...|   La Paz|Bolivia| 13355.0|  3|\n",
+            "|Capitan Nicolas R...|   Potosi|Bolivia| 12913.0|  4|\n",
+            "|Yushu Batang Airport|    Yushu|  China| 12816.0|  5|\n",
+            "+--------------------+---------+-------+--------+---+\n",
+            "only showing top 5 rows\n",
+            "\n"
+          ],
+          "name": "stdout"
         }
       ]
     }
