--- a/AWS01_S3_STS.ipynb
+++ b/AWS01_S3_STS.ipynb
@@ -6,7 +6,7 @@
       "name": "AWS01_S3_STS.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPa5pvVA4Snn8Mq318zNFqD",
+      "authorship_tag": "ABX9TyPeJzPFtAl8ZX773L+lG6Cc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -350,7 +350,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Accessing any service for which doesn't have access to gives an error as below**"
+        "**Accessing any service for which current user doesn't have access to gives an error as below**"
       ],
       "metadata": {
         "id": "1rzij2MYKl5s"
