--- a/002_pyspark_ckbk_perpare_date_for_modelling.ipynb
+++ b/002_pyspark_ckbk_perpare_date_for_modelling.ipynb
@@ -6,7 +6,7 @@
       "name": "002_pyspark_ckbk_perpare_date_for_modelling.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP3YjuzeRoXUdMXbfmcAZiU",
+      "authorship_tag": "ABX9TyNaPjuhKaJG3XWAdQbYP2AY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -126,7 +126,7 @@
       "metadata": {
         "id": "2Cv6RbrBWEEx"
       },
-      "execution_count": 13,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -413,12 +413,148 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "3. Duplicates rows with different IDs"
+      ],
+      "metadata": {
+        "id": "ajM8mBPqZKkG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "full_removed.groupBy([column for column in dirty_data.columns if column!='Id'])\\\n",
+        "          .count()\\\n",
+        "          .filter('count>1')\\\n",
+        "          .show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XCDS3eEvYaOI",
+        "outputId": "1f0db6f8-5a3e-4cd5-8ad7-cbd6a45960bd"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+------------+----------+----------+------------+---------+-----------+----+-----+\n",
+            "|Manufacturer|     Model|EngineType|Displacement|Cylinders|FuelEconomy|MSRP|count|\n",
+            "+------------+----------+----------+------------+---------+-----------+----+-----+\n",
+            "|         BMW|440i Coupe|     Turbo|         3.0|        6|         23|null|    2|\n",
+            "|     Hyundai|   G80 AWD|     Turbo|         3.3|        6|         20|null|    2|\n",
+            "+------------+----------+----------+------------+---------+-----------+----+-----+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "no_ids = full_removed.drop('Id')\n",
+        "no_ids.distinct().count(),full_removed.count()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "23XYdSLwZdzK",
+        "outputId": "d613ad71-fb41-4ceb-ae8b-d3e6694bc20a"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(19, 21)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "id_removed = full_removed.dropDuplicates([col for col in full_removed.columns if col!='Id'])\n",
+        "id_removed.count()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z007oVQ2ah_A",
+        "outputId": "caba4220-0897-41f6-c762-dd3b832dedd4"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "19"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. ID Collisions"
+      ],
+      "metadata": {
+        "id": "7ZrjeoRDa_m5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from pyspark.sql.functions import count,countDistinct\n",
+        "id_removed.agg(\n",
+        "    count('Id').alias('countOfIds'),\n",
+        "    countDistinct('Id').alias('countOfDistinctIds')\n",
+        ").show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l08_3HKGawh7",
+        "outputId": "8a029b30-1cf6-4440-f105-9e944d8081f1"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+----------+------------------+\n",
+            "|countOfIds|countOfDistinctIds|\n",
+            "+----------+------------------+\n",
+            "|        19|                18|\n",
+            "+----------+------------------+\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "XCDS3eEvYaOI"
+        "id": "DkElDEL7be1r"
       },
       "execution_count": null,
       "outputs": []
